# line_image_classifier

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
src/line_image_classifier/: clustering.py  pipeline.py
src/monocheck/: clustering.py  dimension_reduction.py  feature_extraction.py  pipeline.py  prepare.py
tests/feature_extraction/: test_extract_features.py
tests/prepare/: test_load_image.py
